// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ClaimCard component matches the snapshot of a two line claim 1`] = `
<View
  style={
    Array [
      Object {
        "backgroundColor": "white",
        "borderBottomWidth": 1,
        "borderColor": "rgb(236, 236, 236)",
        "flexDirection": "row",
        "paddingVertical": 12,
      },
      Object {},
    ]
  }
>
  <View
    style={
      Object {
        "alignItems": "center",
        "flex": 0.2,
      }
    }
  />
  <View
    onTouchEnd={[Function]}
    style={
      Object {
        "flex": 0.7,
        "overflow": "scroll",
      }
    }
  >
    <ClaimCard
      key="givenName"
      primaryText="Test"
      secondaryText="givenName"
    />
    <ClaimCard
      key="familyName"
      primaryText="Running"
      secondaryText="familyName"
    />
  </View>
  <View
    style={
      Object {
        "flex": 0.1,
      }
    }
  />
</View>
`;

exports[`ClaimCard component matches the snapshot on render 1`] = `
<View
  style={
    Array [
      Object {
        "backgroundColor": "white",
        "borderBottomWidth": 1,
        "borderColor": "rgb(236, 236, 236)",
        "flexDirection": "row",
        "paddingVertical": 12,
      },
      Object {},
    ]
  }
>
  <View
    style={
      Object {
        "alignItems": "center",
        "flex": 0.2,
      }
    }
  />
  <View
    onTouchEnd={[Function]}
    style={
      Object {
        "flex": 0.7,
        "overflow": "scroll",
      }
    }
  >
    <ClaimCard
      key="familyName"
      primaryText="Running"
      secondaryText="familyName"
    />
  </View>
  <View
    style={
      Object {
        "flex": 0.1,
      }
    }
  />
</View>
`;
